# caja-xattrs

./: .gitignore  AUTHORS  Makefile.am  NEWS  README.md  autogen.sh  configure.ac
po/: POTFILES.in  am.po  ar.po  be.po  bg.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  es_CO.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  frp.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  ku_IQ.po  lt.po  mk.po  (+23 more)
src/: Makefile.am  ui-utils.c
